--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "solar-icons": "^0.0.15",
     "xlsx": "^0.18.5"
   },
