--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
